--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
+    "react-vertical-timeline-component": "^3.6.0",
     "tailwind": "^4.0.0"
   },
   "devDependencies": {
